--- a/style.css
+++ b/style.css
@@ -16,9 +16,29 @@ td {
     padding: 5px;
 }
 
+pre {
+    font-size: 20px
+}
+p {
+    font-size: 20px;
+}
+
 a {
     text-decoration: underline;
     color: #000;
+}
+
+.op {
+    display: flex;
+}
+
+.do-while {
+    margin-left: 10%;
+}
+
+
+footer>a:hover{
+    background-color: #bebebe;
 }
 
 footer>a{
